[tool.poetry]
name = "diffusion-backend"
version = "0.1.0"
description = ""
authors = ["jeina <jeina@toss.im>"]
readme = "README.md"
packages = [{include = "diffusion_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
diffusers = "^0.11.1"
transformers = "^4.25.1"
accelerate = "^0.15.0"
fastapi = "^0.88.0"
uvicorn = {version = "^0.20.0", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
